--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "snakemake-pipeline-general"]
-	path = snakemake-pipeline-general
+	path = {{cookiecutter.directory_name}}/snakemake-pipeline-general
 	url = git@github.com:yztxwd/snakemake-pipeline-general.git
